--- a/Architect network infrastructure in Azure/0. Architect network infrastructure in Azure.md
+++ b/Architect network infrastructure in Azure/0. Architect network infrastructure in Azure.md
@@ -170,28 +170,7 @@
     - using `az network vpn-connection show`
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-vpn-gateway/5-summary)
 
-## [Connect your on-premises network to the Microsoft global network by using ExpressRoute](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/index)
 
-- [Introduction](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/1-introduction)
-- [What is the Azure ExpressRoute service?](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/2-expressroute-service)
-- [How Azure ExpressRoute works](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/3-how-expressroute-works)
-- [When to choose Azure ExpressRoute](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/4-choose-expressroute)
-- [Summary](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/5-summary)
-
-## [Secure and isolate access to Azure resources by using network security groups and service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/index)
-- [Introduction](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/1-introduction)
-- [Use network security groups to control network access](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/2-network-security-groups)
-- [Exercise - Create and manage network security groups](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/3-exercise-network-security-groups)
-- [Secure network access to PaaS services with virtual network service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/4-vnet-service-endpoints)
-- [Exercise - Restrict access to Azure Storage by using service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/5-exercise-vnet-service-endpoints)
-- [Summary](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/6-summary)
-## [Distribute your services across Azure virtual networks and integrate them by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/index)
-- [Introduction](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/1-introduction)
-- [Connect services by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/2-connect-services-using-vnet-peering)
-- [Exercise - Prepare virtual networks for peering by using Azure CLI commands](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/3-exercise-prepare-vnets-for-peering-using-azure-cli-commands)
-- [Exercise - Configure virtual network peering connections by using Azure CLI commands](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/4-exercise-configure-vnet-peering-connections-using-azure-cli-commands)
-- [Exercise - Verify virtual network peering by using SSH between Azure virtual machines](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/5-exercise-verify-vnet-peering)
-- [Summary](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/6-summary)
 ## [Enhance your service availability and data locality by using Azure Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/index)
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/1-introduction)
 - [Route network traffic by using Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/2-priority-routing)
@@ -248,7 +227,14 @@
 ``` js
 var str = ""
 $("a.is-block").each(function( index ) {
-  str = str + ("- [" + this.innerText + "](" + this.href + ")\n");
+  if(this.innerText){
+    if(!$(this).hasClass("unit-title")){
+      str = str + "# [";
+    }else{
+      str = str + "- [";
+    }
+    str = str + this.innerText + "](" + this.href + ")\n";
+  }
 });
 console.log(str)
 ```
