master: changes left

--- a/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
+++ b/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
@@ -50,6 +50,7 @@
           - SQL - This tag represents the address for Azure SQL Database, Azure Database for MySQL, Azure Database for PostgreSQL, and Azure SQL Data Warehouse services. You can specify whether traffic is allowed or denied, and you can limit to a specific region.
           - AppService - This tag represents address prefixes for Azure App Service.
       - **application security groups**
+        - ASGs are a way to define your own groups of resources So that they cane be used in the Source or destinations of the rules
         - An application security group allows you to group network interfaces together. You can then use that application security group as a source or destination rule within a network security group.
         - 
 
