master: unit done

--- a/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
+++ b/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
@@ -55,6 +55,131 @@
         - 
 
 - [Exercise - Create and manage network security groups](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/3-exercise-network-security-groups)
+  - Create a virtual network and network security group
+    - Create resource group
+      ````
+      rg = <resource group name>
+      az group create --name $rg --location <location>
+      ```
+    - Create Vnet with subnet
+      ```
+      az network vnet create \
+        --resource-group $rg \
+        --name ERP-servers
+        --address-prefix 10.0.0.0/16 \
+        --subnet-name applications\
+        --subnet-prefix 10.0.0.0/24
+      ```
+    - Create database vnet
+      ```
+      az network vnet subnet create \
+        --resource-group $rg
+        --vnet-name ERP-servers
+        --name databases
+        --address-prefix 10.0.1.0/24
+      ```    
+    - Create nsg
+      ```
+      az network nsg create \
+        --resource-group $rg
+        --name ERP-SERVERS-NSG
+      ```
+  - Create VMs running Ubuntu
+      ```
+      az vm create \
+      --resource-group $rg
+      --name AppServer
+      --vnet-name ERP-servers
+      --subnet Applications
+      --nsg ERP-SERVERS-NSG
+      --image UbuntuLTS
+      --size Standard_B1Ls
+      --admin-username azureuser
+      -no-wait
+      -admin-password
+      ```
+  - all ssh attempts will fail at this stage because the default rule is blocking all inbound traffic
+  - Create a security rule for SSH
+    ```
+      az network nsg rule create \
+        --resource-group
+        --nsg-name
+        --name
+        --direction Inbound
+        --priority 100
+        --source-address-prefixes '*'
+        --source-port-ranges '*'
+        --destination-address-prefixes '*'
+        --destination-port-ranges 22
+        --access Allow
+        --protocal TCP
+        --description "Allow inbound SSH"
+    ```
+  - Create a security rule to prevent web access
+    - add a rule so that AppServer can communicate with DataServer over HTTP, but DataServer can't communicate with AppServer over HTTP
+    ```
+      az network nsg rule create \
+      --resource-group $rg \
+      --nsg-name ERP-SERVERS-NSG \
+      --name httpRule \
+      --direction Inbound \
+      --priority 150 \
+      --source-address-prefixes 10.0.1.4 \
+      --source-port-ranges '*' \
+      --destination-address-prefixes 10.0.0.4 \
+      --destination-port-ranges 80 \
+      --access Deny \
+      --protocol Tcp \
+      --description "Deny from DataServer to AppServer on port 80"
+    ```
+  - Deploy an application security group
+    - create asg
+      ```
+        az network asg create \
+        --resource-group $rg \
+        --name ERP-DB-SERVERS-ASG
+      ```
+    - associate Nic with ASG
+      ```
+        az network nic ip-config update \
+        --resource-group $rg \
+        --application-security-groups ERP-DB-SERVERS-ASG \
+        --name ipconfigDataServer \
+        --nic-name DataServerVMNic \
+        --vnet-name ERP-servers \
+        --subnet Databases
+      ```
+    - update nsg rule to use the asg
+      ```
+      az network nsg rule update \
+        --resource-group $rg \
+        --nsg-name ERP-SERVERS-NSG \
+        --name httpRule \
+        --direction Inbound \
+        --priority 150 \
+        --source-address-prefixes "" \
+        --source-port-ranges '*' \
+        --source-asgs ERP-DB-SERVERS-ASG \
+        --destination-address-prefixes 10.0.0.4 \
+        --destination-port-ranges 80 \
+        --access Deny \
+        --protocol Tcp \
+        --description "Deny from DataServer to AppServer on port 80 using application security group"
+      ```
 - [Secure network access to PaaS services with virtual network service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/4-vnet-service-endpoints)
+  - **Virtual network service endpoints**
+    - ![](2019-11-08-11-22-20.png)
+    - Use virtual network service endpoints to extend your private address space in Azure by providing a direct connection to your Azure services. Service endpoints let you secure your Azure resources to only your virtual network. Service traffic will remain on the Azure backbone, and doesn't go out to the internet.
+    - Service endpoints can connect certain PaaS Services directly to your private address space in Azure, so they act like they’re on the same virtual network. You use your private address space to access the PaaS services directly. Adding service endpoints doesn't remove the public endpoint.
+  - How service endpoints work
+    - To enable a service endpoint, you must do two things:
+      1. Turn off public access to the service.
+      2. Add the service endpoint to a virtual network.
+    - **When you enable a service endpoint, you restrict the flow of traffic, and allow your Azure virtual machines to access the service directly from your private address space. Devices cannot access the service from a public network.** 
+    - On a deployed virtual machine vNIC, if you look at Effective routes, you'll notice the service endpoint as the Next Hop Type.
+    - All traffic for the service now is routed to the **VirtualNetworkServiceEndpoint**, and remains internal to Azure.
+  - Service endpoints and hybrid networks
+    - Service resources that you've secured by using virtual network service endpoints are not, by default, accessible from on-premises networks through **ExpressRoute**. To access resources from an on-premises network, use **NAT IPs**
+
 - [Exercise - Restrict access to Azure Storage by using service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/5-exercise-vnet-service-endpoints)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/6-summary)
