master: unit done

--- a/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
+++ b/Architect network infrastructure in Azure/2. Secure and isolate access to Azure resources by using network security groups and service endpoints.md
@@ -32,9 +32,9 @@
       - **When the conditions for a rule match the device configuration, rule processing stops.** 
     - Stateful connections
       - Return traffic is automatically allowed for the same TCP/UDP session. For example, an inbound rule allowing traffic on port 80 also allows the virtual machine to respond to the request (typically on an ephemeral port). You don't need a corresponding outbound rule.
-    - Default security rules
-      - These default rules allow connectivity within a virtual network and from Azure load balancers. 
-      - They also allow outbound communication to the internet, and deny inbound traffic from the internet.
+    - **Default security rules**
+      - T**hese default rules allow connectivity within a virtual network and from Azure load balancers**. 
+      - **They also allow outbound communication to the internet, and deny inbound traffic from the internet**.
     - Augmented security rules
       - **multiple IP addresses**
       - **multiple ports**
@@ -171,7 +171,19 @@
     - ![](2019-11-08-11-22-20.png)
     - Use virtual network service endpoints to extend your private address space in Azure by providing a direct connection to your Azure services. Service endpoints let you secure your Azure resources to only your virtual network. Service traffic will remain on the Azure backbone, and doesn't go out to the internet.
     - Service endpoints can connect certain PaaS Services directly to your private address space in Azure, so they act like they’re on the same virtual network. You use your private address space to access the PaaS services directly. Adding service endpoints doesn't remove the public endpoint.
-  - How service endpoints work
+    - This feature is available for the following Azure services and regions, and you will also find the Microsoft.* resource in parenthesis that needs to be enabled from the Subnet side while configuring service endpoints for your service :
+      - Azure Storage (Microsoft.Storage)
+      * Azure SQL Database (Microsoft.Sql)
+      * Azure SQL Data Warehouse (Microsoft.Sql)
+      * Azure Database for PostgreSQL server (Microsoft.Sql)
+      * Azure Database for MySQL server (Microsoft.Sql)
+      * Azure Database for MariaDB (Microsoft.Sql)
+      * Azure Cosmos DB (Microsoft.AzureCosmosDB)
+      * Azure Key Vault (Microsoft.KeyVault)
+      * Azure Service Bus (Microsoft.ServiceBus)
+      * Azure Event Hubs (Microsoft.EventHub)
+      * Azure Data Lake Store Gen 1 (Microsoft.AzureActiveDirectory)
+      * Azure App Service
     - To enable a service endpoint, you must do two things:
       1. Turn off public access to the service.
       2. Add the service endpoint to a virtual network.
@@ -182,4 +194,62 @@
     - Service resources that you've secured by using virtual network service endpoints are not, by default, accessible from on-premises networks through **ExpressRoute**. To access resources from an on-premises network, use **NAT IPs**
 
 - [Exercise - Restrict access to Azure Storage by using service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/5-exercise-vnet-service-endpoints)
+  - Add rules to the network security group
+    - an outbound rule to deny all internet access.
+      ```
+        az network nsg rule create \
+        --resource-group $rg \
+        --nsg-name ERP-SERVERS-NSG \
+        --name Deny_Internet \
+        --priority 200 \
+        --direction Outbound \
+        --source-address-prefixes "VirtualNetwork" \
+        --source-port-ranges '*' \
+        --destination-address-prefixes "Internet" \
+        --destination-port-ranges '*' \
+        --access Deny \
+        --protocol '*' \
+        --description "Deny access to Internet."
+      ```
+    - an outbound rule to allow access to Storage.
+      ```
+      az network nsg rule create \
+        --resource-group $rg \
+        --nsg-name ERP-SERVERS-NSG \
+        --name Allow_Storage \
+        --priority 190 \
+        --direction Outbound \
+        --source-address-prefixes "VirtualNetwork" \
+        --source-port-ranges '*' \
+        --destination-address-prefixes "Storage" \
+        --destination-port-ranges '*' \
+        --access Allow \
+        --protocol '*' \
+        --description "Allow access to Azure Storage"
+      ```
+    - Configure storage account and file share
+    - Enable the service endpoint
+      - assign the **Microsoft.Storage** endpoint to the subnet.
+        ```
+        az network vnet subnet update \
+          --vnet-name ERP-servers \
+          --resource-group $rg \
+          --name Databases \
+          --service-endpoints Microsoft.Storage
+        ```
+      - deny all access to change the default action to **Deny**
+        ```
+        az storage account update \
+          --resource-group $rg \
+          --name $STORAGEACCT \
+          --default-action Deny
+        ``` 
+      - restrict access to the storage account to only the **database** subnet
+        ```
+          az storage account network-rule add \
+          --resource-group $rg \
+          --account-name $STORAGEACCT \
+          --vnet ERP-servers \
+          --subnet Databases
+        ```
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/6-summary)
