master: changes left

--- a/Architect network infrastructure in Azure/3. Virtual network peering.md
+++ b/Architect network infrastructure in Azure/3. Virtual network peering.md
@@ -58,5 +58,23 @@
         --vnet-name SalesVNet \
         --output table
     ```
+  - Check effective routes
+    - You can further check the peering connection by looking at the routes that apply to the network interfaces of the VMs.
+    - Run the following command to look at the routes that apply to the SalesVM network interface.
+        ```
+        az network nic show-effective-route-table \
+            --resource-group [sandbox resource group name] \
+            --name SalesVMVMNic \
+            --output table
+        ```
+    - The output table shows the effective routes for the VM's network interface. For **SalesVMVMNic**, you should see a route to **10.2.0.0/16** with a next hop type of **VNetPeering**. This is the network route for the peering connection from **SalesVNet** to **MarketingVNet**.
+      - ![](2019-11-08-12-27-53.png)
+    - Look at the routes for MarketingVM with a global peering
+      - ![](2019-11-08-12-29-23.png)
+
 - [Exercise - Verify virtual network peering by using SSH between Azure virtual machines](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/5-exercise-verify-vnet-peering)
+  - In Cloud Shell, run the following command, using SSH to connect to the public IP address of SalesVM. 
+    - `ssh -o StrictHostKeyChecking=no azureuser@<SalesVM public IP>`
+  - To test the connectivities between each other, try `ssh` using private IP from the Sales VMs
+    - `ssh -o StrictHostKeyChecking=no azureuser@<MarketingVM private IP>`
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/6-summary)
